frame/support/test/tests/derive_no_bound_ui/default_too_many_attributes.rs
trait Config {
	type C;
}

#[derive(frame_support::DefaultNoBound)]
enum Foo<T: Config> {
	#[default]
	Bar(T::C),
	#[default]
	Baz,
}

fn main() {}
